src/objects/Book_Copy__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book_Copy__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Books Copy</relationshipLabel>
        <relationshipName>Books_Copy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Copy_Code__c</fullName>
        <formula>Book_Copy__r.Code__c  &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>availableAux__c</fullName>
        <defaultValue>true</defaultValue>
        <label>availableAux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bookTitle__c</fullName>
        <formula>Book_Copy__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bookTitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calculateMaxDate__c</fullName>
        <label>calculateMaxDate</label>
        <summarizedField>Loan__c.Return_Date__c</summarizedField>
        <summaryForeignKey>Loan__c.Copy_Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Book Copy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Book_Copy__c</columns>
        <columns>bookTitle__c</columns>
        <columns>Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC{0000}</displayFormat>
        <label>Book Copy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books Copy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>activeValidation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(!ISNULL($ObjectType.Loan__c.Fields.Copy_Loan__c),  Available__c = true,  Available__c = false)</errorConditionFormula>
        <errorDisplayField>Available__c</errorDisplayField>
        <errorMessage>The book has an active loan</errorMessage>
    </validationRules>
</CustomObject>